RESOLVED FIXED315381
REGRESSION(310826@main): Cannot type with Hindi - InScript in Mail
https://bugs.webkit.org/show_bug.cgi?id=315381
Summary REGRESSION(310826@main): Cannot type with Hindi - InScript in Mail
Ryosuke Niwa
Reported 2026-05-22 13:13:19 PDT
1. Type “kd/e” using “Hindi - InScript” 2. It will render क्ा instead of “क्या”' <rdar://177229173>
Attachments
Ryosuke Niwa
Comment 1 2026-05-22 13:29:37 PDT
EWS
Comment 2 2026-05-22 20:41:53 PDT
Committed 313779@main (92da80f85aff): <https://commits.webkit.org/313779@main> Reviewed commits have been landed. Closing PR #65504 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.